css/initial.css
/*************/
/* VARIABLES */
/*************/

:root {
    --GW-serif-font-stack: "Source Serif Pro", "Apple Garamond", "Baskerville", "Libre Baskerville", "Droid Serif", "Times New Roman", "Times", serif, "Noto Emoji", "Quivira";
    --GW-sans-serif-font-stack: "Source Sans Pro", "Lucida Sans Unicode", "Helvetica", "Trebuchet MS", sans-serif, "Noto Emoji", "Quivira";
    --GW-monospaced-font-stack: "IBM Plex Mono", "Liberation Mono", "Consolas", "Courier", monospace, "Noto Emoji", "Quivira";

    --GW-body-text-font-size: 20px;

    --GW-body-max-width: 935px;
    --GW-body-side-padding: 20px;
}
@media all and (max-width: 649px) {
    :root {
        --GW-body-text-font-size: 18px;

        --GW-body-side-padding: 16px;
    }
}


/***********/
/* GENERAL */
/***********/

html,
.shadow-body {
    --base-font-size: var(--GW-body-text-font-size);
    --background-color: var(--GW-body-background-color);

    background-color: var(--background-color);
    color: var(--GW-body-text-color);
    font-weight: 400;
    font-family: var(--GW-serif-font-stack);
    font-size: var(--base-font-size);
}


/****************/
/* ADAPTIVENESS */
/****************/

/*  Utility classes: show something only on mobile (`.desktop-not`)
    or only on desktop (`.mobile-not`).
 */
@media all and (max-width: 649px) {
    .mobile-not {
        display: none !important;
    }
}
@media all and (min-width: 650px) {
    .desktop-not {
        display: none !important;
    }
}



/**********/
/* LAYOUT */
/**********/

html,
body {
    margin: 0;
    padding: 0;
}

main {
    position: relative;
	min-height: 100vh;
    max-width: var(--GW-body-max-width);
    margin: 0 auto;
    padding: 1rem 
    		 var(--GW-body-side-padding) 
    		 1.25rem 
    		 var(--GW-body-side-padding);
	display: flex;
	flex-flow: column;
}
@media all and (max-width: 649px) {
	main {
		overflow: hidden;
		padding: 1rem 
				 var(--GW-body-side-padding) 
				 4.25rem 
				 var(--GW-body-side-padding);
	}
}


/***********/
/* SIDEBAR */
/***********/

#sidebar {
	position: relative;
    display: flex;
}

/*  Sidebar links (including logo).
 */
#sidebar a {
    border: 1px dotted currentColor;
    text-align: center;
    margin: 1px 0 1px 2px;
}

/*  Logo.
 */
#sidebar a.logo {
    display: flex;
    align-items: center;
    margin: 1px 0;
}
#sidebar a.logo .logo-image {
    width: var(--logo-width);
    height: calc(var(--logo-width) * 94/80);
}

/*  Sidebar links (not including logo).
 */
#sidebar .sidebar-links {
    flex: 1 1 100%;
    display: flex;
    flex-flow: row wrap;
}
#sidebar .sidebar-links a {
    flex: 1 1 auto;
    padding: 0.25em 0.75em;
}

@media all and (max-width: 649px) {
	#sidebar {
		margin-right: -1px;
	}

    /*  Logo.
     */
    #sidebar a.logo {
    	margin: 1px 0 1px -1px;
        padding: 0.5em 0.375em;
    }
    #sidebar a.logo .logo-image {
        --logo-width: 2.5em;
    }

    /*  Sidebar links (not including logo).
     */
    #sidebar .sidebar-links a {
        font-variant-caps: small-caps;
    }

    #sidebar .sidebar-links a[href="/about"],
    #sidebar .sidebar-links a.site {
        order: -3;
        flex: 1 1 20%;
    }
    #sidebar .sidebar-links a[href="/me"],
    #sidebar .sidebar-links a.me {
        order: -1;
        flex: 1 1 20%;
    }
    #sidebar .sidebar-links a[href="/changelog"],
    #sidebar .sidebar-links a.new-essays {
        order: 1;
        flex: 1 1 35%;
    }
    #sidebar .sidebar-links a[href="/doc-newest-index"],
    #sidebar .sidebar-links a.new-links {
        order: 2;
        flex: 1 1 35%;
    }
    #sidebar .sidebar-links a.patreon {
        order: -2;
        flex: 1 1 20%;
    }
}

@media all and (min-width: 650px) {
    /*  Sidebar links (including logo).
     */
    #sidebar a {
        color: var(--GW-nav-header-link-color);
    }
    #sidebar a:hover {
        color: var(--GW-nav-header-link-hover-color);
    }

    /*  Sidebar links (not including logo).
     */
    #sidebar .sidebar-links a {
        text-transform: uppercase;
        font-weight: 600;
    }

	@media all and (max-width: 779px) {
		#sidebar .sidebar-links .mobile-not {
			display: none;
		}
	}
    @media all and (max-width: 1179px) {
        /*  Logo.
         */
        #sidebar a.logo {
            padding: 0.25em 0.375em;
        }
        #sidebar a.logo .logo-image {
            --logo-width: 1em;
        }
    }
    @media all and (min-width: 1180px) {
        /*  Logo.
         */
        #sidebar a.logo {
            position: absolute;
            right: 100%;
            margin: 0 0.75em 0 0;
            padding: 0.125em;
            border: none;
            opacity: 0.5;
        }
        #sidebar a.logo:hover,
        #sidebar a.logo.bright {
            opacity: 1.0;
        }
        #sidebar a.logo.fading {
            transition:
                opacity 1s ease;
        }
        #sidebar a.logo .logo-image {
            --logo-width: 4em;
        }

        /*  Sidebar links (not including logo).
         */
        #sidebar .sidebar-links a:first-child {
            margin-left: 0;
        }
    }
}


/*********************/
/* ARTICLE CONTAINER */
/*********************/

article {
    margin-top: 1.75rem;
	flex: 1 1 auto;
}


/***************/
/* PAGE HEADER */
/***************/

@media all and (max-width: 649px) {
    header {
        margin: 0 1rem 1.75rem 1rem;
    }
}
@media all and (min-width: 650px) {
    header {
        margin: 0.375rem 2rem 1.75rem 2rem;
    }
}

header h1 {
    margin: 0;
    text-align: center;
    line-height: 1.15;
    text-transform: none;
    font-variant-caps: small-caps;
    font-size: 2.5em;
    font-weight: 600;
    letter-spacing: -1px;
}
@media all and (max-width: 649px) {
    header h1 {
        font-size: 2em;
    }
}

/*  Source Serif Pro has no italic small caps, sadly.
 */
header h1 em {
    font-variant-caps: normal;
}
/* ... */

